--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aos": "^2.3.4",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.537.0",
     "marked": "^4.2.4",
     "next": "14.1",
     "next-mdx-remote": "^4.2.0",
